 + Added support for EXPONENTIAL formula curves to experience.yml
 + Added new /mcconvert command to convert players levels and experience from one formula curve to another.
 + Added snow to Excavation blocks
 + Added new experience curve option. Cumulative curve, calculates experience needed for next level using power level.
 + Added extra settings to config.yml for "Call of the Wild" (Taming)
 + Added a 5 second cooldown after teleporting before Acrobatics XP can be earned. Plus a config option to disable
 + Added new API methods to ExperienceAPI to get a players rank on the leaderboards
 + Added new McMMOPlayerDeathPenaltyEvent, fired when a player dies and would lose levels
 + Added new McMMOPlayerLevelChangeEvent, fired when a players level changes
 + Added new McMMOPlayerLevelDownEvent, fired when a player loses levels
 + Added ability to give custom names to items in treasures.yml - use the key "Custom_Name" to set, expects a string.
 + Added ability to give lore to items in treasures.yml - use the key "Lore" to set, expects a list of strings.
 + Added Quartz and Name Tags to the default Excavation treasures
 + Added a warning message if the server is running NoCheatPlus without CompatNoCheatPlus
 + Added cooldown to commands with heavy database access to prevent denial of service
 + Added /mcscoreboard keep, to keep the scoreboard up forever
 + Added Rainbow Mode to scoreboards
 + Added new /mccooldowns command to show all ability cooldowns
 + Commands may now both print text and display a scoreboard
 + Killing a custom entity will automatically add it to the custom entity config file with default values.
 = Fixed bug which allowed players to bypass fishing's exploit prevention
 = Fixed bug where FakeEntityDamageByEntityEvent wasn't being fired
 = Fixed bug with "Skull Splitter" not finding the locale string
 = Fixed issue where locale strings could cause the scoreboard header to be longer than 16 characters.